@@ -1,3 +1,6 @@
+2009-03-24 Boris Mikhaylov <http://www.tmn.ru/~bor>
+	* Added unsigned 16/24/32 integer handling.
+
 2009-03-23 Boris Mikhaylov <http://www.tmn.ru/~bor>
 	* Normalization of integer samples are removed.
 	* Added more switches to bs2bstream.
